--- a/aside.html
+++ b/aside.html
@@ -44,7 +44,7 @@
                                 </div>
 
                                 <span class="navigation-angle">
-                                    <i class="fa fa-angle-left pull-right"></i>
+                                    <i class="fa fa-angle-left pull-right rotate-angle-close"></i>
                                 </span>
                             </a>
                             <ul class="accordian">
