--- a/aside.html
+++ b/aside.html
@@ -48,7 +48,8 @@
                                 </span>
                             </a>
                             <ul class="accordian">
-                                <li><a class="navigation-link" href="#/">
+                                <li>
+                                    <a class="navigation-link" href="#/">
                                         <div>
                                             <i class="fa fa-circle-o navigation-circle3"></i>
                                             <span class="navigation-link-text">Dashboard v1</span>
