--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     </a>
                 </div>
                 <div class="nav-left2">
-                    <a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button">
+                    <a href="#/" class="sidebar-toggle" data-toggle="push-menu" role="button">
                         <i class="fa-solid fa-bars"></i>
                         <span class="sr-only">Toggle navigation</span>
                     </a>
