added form and table html separate files

--- a/index.html
+++ b/index.html
@@ -96,14 +96,14 @@
                             </a>
                             <ul class="accordian">
                                 <li>
-                                    <a class="navigation-link" href="#/">
+                                    <a class="navigation-link" href="./form.html">
                                         <div>
                                             <i class="fa fa-circle-o navigation-circle3"></i>
                                             <span class="navigation-link-text">User 1</span>
                                         </div>
                                     </a>
                                 </li>
-                                <li><a class="navigation-link" href="#/">
+                                <li><a class="navigation-link" href="./datatable.html">
                                         <div>
                                             <i class="fa fa-circle-o navigation-circle3"></i>
                                             <span class="navigation-link-text">User 2</span>
